# TTK22-ROS

./: .gitignore  README.md
assignments_ws/: PointCloudCompare.rviz
assignments_ws/src/iterative_closest_point/: CMakeLists.txt  README.md  package.xml
assignments_ws/src/iterative_closest_point/include/iterative_closest_point/: icp.h
assignments_ws/src/iterative_closest_point/rviz/: pointCloudCompareAll.rviz
assignments_ws/src/iterative_closest_point/src/: icp.cpp  icp_node.cpp
assignments_ws2/: .gitignore
assignments_ws2/src/iterative_closest_point/: CMakeLists.txt  README.md  package.xml
assignments_ws2/src/iterative_closest_point/include/iterative_closest_point/: icp.hpp
assignments_ws2/src/iterative_closest_point/rviz/: compare_all_pointclouds.rviz
assignments_ws2/src/iterative_closest_point/src/: icp.cpp  icp_node.cpp  main.cpp
practice_ws/src/image_processing/: CMakeLists.txt  package.xml
practice_ws/src/image_processing/include/image_processing/: image_processing.h
practice_ws/src/image_processing/src/: image_processing.cpp  image_processing_node.cpp
practice_ws/src/point_cloud_filtering/: CMakeLists.txt  package.xml
practice_ws/src/point_cloud_filtering/include/point_cloud_filtering/: point_cloud_filtering.h
practice_ws/src/point_cloud_filtering/src/: outlierFilter.cpp  outlierFilter_client_test.cpp  outlierFilter_server.cpp  voxelGrid.cpp  voxelGrid_node.cpp
practice_ws/src/point_cloud_filtering/srv/: ProcessPointCloud.srv
