<?xml version="1.0"?>
<package format="2">
    <name>image_processing</name>
    <version>0.0.0</version>
    <description>The image_processing package</description>

    <maintainer email="hurodor@todo.todo">hurodor</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>std_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
